2004-01-15  Oliver Kiddle  <opk@zsh.org>

	* 19377 based on 19375 (Laurent Rineau):
	Completion/Unix/Type/_email_addresses: handle better
	situation where MH is not installed

2004-01-15  Peter Stephenson  <pws@csr.com>

	* 19374: Src/params.c: typo in 19361 caused crashes when
	unsetting special parameters tied internally to arrays.

2004-01-14  Peter Stephenson  <pws@csr.com>

	* 19364: Completion/Unix/Command/.distfiles,
	Completion/Unix/Command/_printenv: complete for printenv.

2004-01-14  Oliver Kiddle  <opk@zsh.org>

	* 19369: Completion/Unix/Command/_getent,
	Completion/Debian/Command/_aptitude,
	Completion/Zsh/Command/_precommand: complete for getent,
	aptitude and catchsegv

	* spotted by Bart: 19365: Completion/Unix/Type/_perl_modules:
	avoid use of $words[0]

2004-01-13  Doug Kearns  <djkea2@mugca.its.monash.edu.au>

	* 19358: Completion/Unix/Command/_elinks: update for version 0.9.0

2004-01-12  Peter Stephenson  <pws@csr.com>

	* 19361: Src/builtin.c, Src/params.c: Memory leaks possibly
	indicated by valgrind.  Retying a pair of variables leaked
	a string.  Attempting to assign to a slice of an associative
	array (error) could leak the value.  Unsetting the array part
	of a user tied array leaked a couple of bytes.

2004-01-09  Peter Stephenson  <pws@csr.com>

	* 19354: Doc/Zsh/compctl.yo, Doc/Zsh/intro.yo: Fix section
	names in manual which upset Docbook.

2004-01-08  Peter Stephenson  <pws@csr.com>

	* 19338 adapated (see following thread): .distfiles,
	Makefile.in, zshconfig.ac, configure.in, configure.ac,
	Etc/zsh-development-guide: Remove support for autoconf
	versions before 2.50.

2004-01-06  Peter Stephenson  <pws@csr.com>

	* 19339: Doc/Zsh/tcpsys.yo, Functions/TCP/tcp_fd_handler,
	Functions/TCP/tcp_read: test for whether we are in a zle handler;
	allow filter to abort output.

2004-01-05  Peter Stephenson  <pws@csr.com>

	* 19336: Src/Zle/compmatch.c: Matches were compared in length