@@ -5,4 +5,5 @@ _bts	_bug
 _debchange _dpkg       _dpkg_source  _dput  _dupload
 _update-alternatives   _make-kpkg    _debfoster
 _auto-apt _debsign
+_update-rc.d
 '
